# ping_pong

./: CMakeLists.txt  README.md  Пинг-понг.pptx
include/: ball.h  constants.h  game.h  gameoverstate.h  gamestate.h  menustate.h  paddle.h  playingstate.h
src/: ball.cpp  game.cpp  gameoverstate.cpp  main.cpp  menustate.cpp  paddle.cpp  playingstate.cpp
tests/: manual_tests.cpp  manual_tests.h
